[project]
name = "llm-playwright"
version = "0.1"
description = "A tool plugin for LLM to enable browsing with Playwright"
license = "MIT"
authors = [
    { name = "Mario Lang", email = "mlang@blind.guru" }
]
dependencies = [
    "llm>=0.26",
    "playwright",
]

[project.entry-points.llm]
llm_playwright = "llm_playwright"
